# ArduinoFloppyDiskReader

./: .gitignore  DebugWindows.md  Dockerfile  build.sh  readme.md
ArduinoFloppyReader/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  makeAll.sh  readme.md  readme.txt  test.sh  valgrind_log.txt
ArduinoFloppyReader/AVRFloppyReaderQt/avrfloppyQt/: .gitignore  avrfloppyQt.pro  clicklabel.cpp  clicklabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ArduinoFloppyReader/ArduinoFloppyReader/: ArduinoFloppyReader.vcxproj  ArduinoFloppyReader.vcxproj.filters  CMakeLists.txt  Main.cpp  makefile  readme.txt  stdafx.h  targetver.h
ArduinoFloppyReader/ArduinoFloppyReaderWin/: ArduinoFloppyReaderWin.h  ArduinoFloppyReaderWin.vcxproj  ArduinoFloppyReaderWinDlg.cpp
ArduinoFloppyReader/lib/: ADFWriter.cpp  ADFWriter.h  ArduinoInterface.cpp  ArduinoInterface.h  CMakeLists.txt  LinuxCompat.cpp  LinuxCompat.h  RotationExtractor.h  SerialIO.cpp
ArduinoFloppyReader/lib/capsapi/: CapsPlug.cpp  CapsPlug.h  Comtype.h
ArduinoFloppyReader/lib/capsimg/: README.md
ArduinoFloppyReader/lib/capsimg/CAPSImg/: CAPSImg.vcxproj  CapsFDCEmulator.cpp  CapsFormatMFM.cpp  CapsLoader.cpp  DiskImageFactory.cpp  config.h.in  dllmain.cpp  stdafx.cpp  stdafx.h
ArduinoFloppyReader/lib/capsimg/CAPSImg/autom4te.cache/: output.0  output.1  requests  traces.0
ArduinoFloppyReader/lib/capsimg/CAPSImg/inc/: CommonTypes.h  debugmsg.h
ArduinoFloppyReader/lib/capsimg/Codec/: CTRawCodec.cpp  CTRawCodecDecompressor.cpp
ArduinoFloppyReader/lib/capsimg/Core/: .gitignore  CRC.cpp  DiskFile.cpp
(+230 files in other folders)
